k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orders-prod
  labels:
    app.kubernetes.io/name: orders-service
    app.kubernetes.io/part-of: sre-capstone
