k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: orders-prod
  labels:
    app.kubernetes.io/name: orders-service
    app.kubernetes.io/part-of: sre-capstone
spec:
  selector:
    app.kubernetes.io/name: orders-service
  ports:
    - name: http
      port: 80
      targetPort: http
